unpackaged/main/default/objects/Excluded_from_Work__c/Excluded_from_Work__c.object-meta.xml
<CustomObject>
    <description>Object holding information around a reason of why an EMployye/Resource can't work with a specific Account.</description>
    <label>Excluded from Work</label>
    <nameField>
        <label>Excluded from Work Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Excluded from Works</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>