unpackaged/main/default/objects/Excluded_from_Work__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account the Resource is Blocked from working on</description>
    <inlineHelpText>Account the Resource is Blocked from working on</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Excluded from Works</relationshipLabel>
    <relationshipName>Excluded_from_Works</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>