unpackaged/main/default/objects/Excluded_from_Work__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for Resource being unable to work against account.</description>
    <inlineHelpText>Reason for Resource being unable to work against account.</inlineHelpText>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>