unpackaged/main/default/objects/Excluded_from_Work__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Look up to the Resource that is excluded to work for an Account</description>
    <inlineHelpText>Look up to the Resource that is excluded to work for an Account</inlineHelpText>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Excluded from Works</relationshipLabel>
    <relationshipName>Excluded_from_Works</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>